// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanel should hide actions and match snapshot 1`] = `
<div aria-expanded="false"
     class="v-expansion-panel"
>
  <button type="button"
          class="v-expansion-panel-header"
  >
  </button>
  <div class="v-expansion-panel-content"
       style="display: none;"
  >
  </div>
</div>
`;

exports[`VExpansionPanel should hide actions and match snapshot 2`] = `
<div aria-expanded="false"
     class="v-expansion-panel"
>
  <button type="button"
          class="v-expansion-panel-header"
  >
    <div class="v-expansion-panel-header__icon">
      <i aria-hidden="true"
         class="v-icon notranslate material-icons theme--light"
      >
        $expand
      </i>
    </div>
  </button>
  <div class="v-expansion-panel-content"
       style="display: none;"
  >
  </div>
</div>
`;
